framec_tests/language_specific/typescript/v3_facade_smoke/negative/strict_unterminated_regex.frm
@target typescript

system S {
    machine:
        $A {
            e() {
                -> $B();
                const re = /abc; // unterminated regular expression
            }
        }
        $B {
        }
}

